--- a/RPG_consol_game/RPG_consol_game.vcxproj.filters
+++ b/RPG_consol_game/RPG_consol_game.vcxproj.filters
@@ -74,6 +74,9 @@
     <ClInclude Include="Puzzle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="dArr.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
